source/operators/api-management/istio/istio-operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-operator-istio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-operator-istio
  template:
    metadata:
      labels:
        app: api-operator-istio
    spec:
      serviceAccountName: odacomponent-account
      containers:
      - name: oda-controller
        image: lesterthomas/api-operator-istio:0.1.0
